compiler/fir/analysis-tests/testData/resolve/problems/typeArgumentsOnThis.kt
// ISSUE: KT-24737

fun x(){
    <!NO_THIS, UNRESOLVED_REFERENCE!>this<!><<!UNRESOLVED_REFERENCE!>X<!>>::y
}

konst a = <!NO_THIS, UNRESOLVED_REFERENCE!>this<!><<!UNRESOLVED_REFERENCE!>X<!>>::y
